<resources>
    <string name="app_name">BestTaxi</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="date">date</string>
    <string name="total">total</string>
    <string name="vehicle">vehicle</string>
    <string name="time">order time</string>
    <string name="model_and_licence">model, licence</string>
    <string name="driver">driver</string>
    <string name="orders_screen_label">Orders</string>
    <string name="details_screen_label">Details</string>
    <string name="try_again">try again</string>
    <string name="error_loading_image">Error loading image</string>
</resources>